--- a/DelaunayTriangulation/Makefile
+++ b/DelaunayTriangulation/Makefile
@@ -4,5 +4,8 @@ test: test.cpp delaunay_triangulation.hpp
 verify: mst_verify.cpp delaunay_triangulation.hpp
 	g++ -std=c++17 -O3 -o verify mst_verify.cpp
 
+measure: measure.cpp delaunay_triangulation.hpp
+	g++ -std=c++17 -O3 -o measure measure.cpp
+
 clean:
-	rm test verify
+	rm test verify measure
