--- a/DelaunayTriangulation/test/Makefile
+++ b/DelaunayTriangulation/test/Makefile
@@ -1,10 +1,10 @@
-test: test.cpp delaunay_triangulation.hpp
+test: test.cpp ../delaunay_triangulation.hpp
 	g++ -std=c++17 -O3 -o test test.cpp
 
-verify: mst_verify.cpp delaunay_triangulation.hpp
+verify: mst_verify.cpp ../delaunay_triangulation.hpp
 	g++ -std=c++17 -O3 -o verify mst_verify.cpp
 
-measure: measure.cpp delaunay_triangulation.hpp
+measure: measure.cpp ../delaunay_triangulation.hpp
 	g++ -std=c++17 -O3 -o measure measure.cpp
 
 clean:
